--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,10 @@
     <title>算法测试</title>
 </head>
 <body>
+<input type="text" placeholder='3+4*2-6'><button>=</button>
+<div id="result">
+    
+</div>
 <script src="test.js"></script>
 </body>
 </html>
