--- a/test/index.html
+++ b/test/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>算法测试</title>
+<meta charset="UTF-8">
+<title>算法测试</title>
+<link rel="stylesheet" href="http://www.tcreator.info/pandora/docs/assets/less/typo-dev.css">
+<link rel="stylesheet" href="http://www.tcreator.info/pandora/docs/assets/less/pandora.css">
+<link rel="stylesheet" href="http://www.tcreator.info/pandora/docs/assets/less/docs.css">
+<style>
+.box{margin:20px 20px;}
+#result{font-size:16px;line-height: 1.5;}
+</style>
 </head>
 <body>
-<input type="text" placeholder='3+4*2-6'><button>=</button>
-<div id="result">
-    
+<div class="box form form-inline">
+    <p><input class="input-text input-big" type="text" placeholder='22-4*(6-(2+1))+1'><button class="btn">计算</button></p>
+<pre id="result">
+
+</pre>
 </div>
+    
 <script src="test.js"></script>
 </body>
 </html>
