--- a/test/offstyle/index.html
+++ b/test/offstyle/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 <div class="box form form-inline">
-    <h1>脱式计算 <small>简易递等式计算器</small></h1>
-    <p>脱式计算，即递等式计算，把计算过程完整写出来的运算，也就是脱离竖式的计算。在计算混合运算时，通常是一步计算一个算式(逐步计算，等号不能写在原式上），要写出每一步的过程。一般来说，等号要往前，不与第一行对齐。也就是离开原式计算。</p>
-    <p><input class="input-text input-big" type="text" placeholder='22-4*(6-(2+1))+1'><button class="btn">计算</button></p>
+    <h1 class="hide">脱式计算 <small>简易递等式计算器</small></h1>
+    <p class="hide">脱式计算，即递等式计算，把计算过程完整写出来的运算，也就是脱离竖式的计算。在计算混合运算时，通常是一步计算一个算式(逐步计算，等号不能写在原式上），要写出每一步的过程。一般来说，等号要往前，不与第一行对齐。也就是离开原式计算。</p>
+    <p><input class="input-text input-big" type="text" placeholder='(12*2-(5+1))/2*3+(11-2*3)'><button class="btn">计算</button></p>
 <pre id="result">
 
 </pre>
